# V2Victory

./: .gitignore  LightControl.h  LightLogic.h  Localization_tests.xlsx  Makefile  README.md  VnV notes.txt  accel_logic.cpp  car.cpp  car.h  car.hpp  carMsg.msg  common.cpp  common.hpp  data_maker.py  defines.hpp  init_int.txt  init_veh.txt  intersection.cpp  intersection.hpp  intersectionMsg.msg  lightControl.h  log.txt  log2.txt  main_2.py  manual_auto_switch.cpp  md  mechanical_accel_system.cpp  output.file  pip.e  ros2_car.cpp  ros2_intersection.cpp  sim_system.cpp  test_main.cpp  test_top.h  tm  tracker.cpp  tracker.h  tracker.hpp  traffic_light_state.cpp  (+6 more)
car_pkg/msg/: CarMsg.msg  IntersectionMsg.msg  car_msg.msg  intersection_msg.msg
encoder/: encode.cpp  encode.h
install/: local_setup.sh  setup.sh
localize/: localize.cpp  localize.h
log/: latest_build
motor_drive/: motor_drive.cpp  motor_drive.h
tcode/: Localization_tests.xlsx  encode.cpp  encode.h  gpio  gpio.cpp  interrupt_t.cpp  light_t.cpp  localize.cpp  localize.h  md  motor_drive.cpp  motor_drive.h  motor_drive_t.cpp  pwm_t.cpp  wp  wp.cpp  wp.sh  ~$Localization_tests.xlsx
vehicle_main/: CMakeLists.txt  fakeit.cpp  package.xml  ros2_car.cpp  runit.sh  test_main.cpp  test_top.h
vehicle_main/car_interface/: CMakeLists.txt  package.xml
vehicle_main/car_interface/msg/: Car.msg
vehicle_main/car_pkg/msg/: Intersection.msg  car_msg.msg
vehicle_main/encoder/: encode.cpp
vehicle_main/localize/: localize.cpp  localize.h
vehicle_main/motor_drive/: motor_drive.cpp  motor_drive.h
(+9 files in other folders)
